<resources>
    <string name="app_name">JAM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Account</string>
    <string name="profile_button_label">Profile</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>

    <string name="action_settings">Settings</string>
    <string name="menu_item_contact_pages">Contact Pages</string>
    <string name="menu_item_program_request">Program Request</string>
    <string name="menu_item_volunteer_registration">Volunteer Registration</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_programs_link">Programs</string>

</resources>
