<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorSecondary"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="example.com.jam.LogInActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="270dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="35dp"
            android:src="@drawable/jalogosticky" />

        <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/photo_image_view"
        android:ems="10"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/shaperectangle2"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress">

        <requestFocus></requestFocus>
    </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailField"
            android:layout_below="@+id/emailField"
            android:ems="10"
            android:hint="@string/password_hint"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shaperectangle2"
            android:inputType="textPassword"></EditText>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/passwordField"
            android:background="@drawable/shaperectangle"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/login_button_label"></Button>

    </LinearLayout>

    <TextView
android:id="@+id/signUpText"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"></TextView>
</RelativeLayout>