<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"

tools:context=".SignUpActivity" >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back2"/>

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="35dp"
            android:src="@drawable/JA2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome!"
            android:textSize="45sp"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:id="@+id/textView5" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/photo_image_view"
            android:ems="10"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shaperectangle2"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress">

            <requestFocus></requestFocus>
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailField"
            android:layout_below="@+id/emailField"
            android:ems="10"
            android:hint="@string/password_hint"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shaperectangle2"
            android:inputType="textPassword"></EditText>

        <Button android:id="@+id/signupButton"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignLeft="@+id/passwordField"
            android:layout_below="@+id/passwordField"
            android:background="@drawable/shaperectangle"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/sign_up_button_label"></Button>

    </LinearLayout>
</RelativeLayout>
